--- a/assets/css/styles2.css
+++ b/assets/css/styles2.css
@@ -27,7 +27,7 @@
 }
 
 .container .content h3 span{
-   background: crimson;
+   background: rgb(25 135 84);
    color:#fff;
    border-radius: 5px;
    padding:0 15px;
