--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
+
+
+
 ::-webkit-scrollbar {
 	width: 10px;
 	height: 8px;
@@ -136,7 +140,7 @@ body {
 	overflow-x: hidden;
 	color: gray;
 	position: relative;
-	font-family: "Patrick Hand", "Roboto", Arial !important;
+	font-family: 'Poppins', sans-serif;
 	font-size: 110%;
 }
 .object-fit-cover {
