--- a/assets/css/styles2.css
+++ b/assets/css/styles2.css
@@ -68,7 +68,7 @@
    justify-content: center;
    padding:20px;
    padding-bottom: 60px;
-   background: rgb(25 135 84);
+   background: rgb(192, 192, 192);
 }
 
 .form-container form{
