--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,8 +8,8 @@
   }
   
   body {
-    font-family: 'Noto Sans JP', sans-serif;
-    background-color: #fef8f8;
+    font-family: "Poppins", sans-serif;
+    background-color: #198754;
   }
   
   .cards {
@@ -108,9 +108,10 @@
   }
   
   .card__description {
+    font-family: "Poppins", sans-serif;
     padding: 0 2em 2em;
     margin: 0;
-    color: #D7BDCA;
+    color: #555555;
     font-family: "MockFlowFont";   
     display: -webkit-box;
     -webkit-box-orient: vertical;
